k8s/infra/nacos/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nacos
  namespace: infra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nacos
  template:
    metadata:
      labels:
        app: nacos
    spec:
      containers:
        - name: nacos
          image: nacos/nacos-server:v2.5.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8848
          readinessProbe:
            tcpSocket:
              port: 8848
            initialDelaySeconds: 40
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8848
            initialDelaySeconds: 60
            periodSeconds: 15
