k8s/infra/nacos/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nacos-nodeport
  namespace: infra
spec:
  type: NodePort
  selector:
    app: nacos
  ports:
    - name: http
      port: 8848
      targetPort: 8848
      nodePort: 30848
    - name: grpc-client
      port: 9848
      targetPort: 9848
      nodePort: 31848
    - name: grpc-raft
      port: 9849
      targetPort: 9849
      nodePort: 31849
