k8s/infra/nacos/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nacos
  namespace: infra
spec:
  selector:
    app: nacos
  ports:
    - name: http
      port: 8848
      targetPort: 8848
