k8s/infra/nacos/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nacos
  namespace: infra
spec:
  ingressClassName: traefik
  rules:
    - host: nacos.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nacos
                port:
                  number: 8848
